# sparseFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
sparse_attention/: __init__.py
sparse_attention/cp/: __init__.py  cp_communication.py  cp_globalize_indices.py
sparse_attention/indexing/: __init__.py  topk_indices.py
sparse_attention/kv_ops/kernels/: __init__.py  cp_gather_kv.py  gather_kv.py
tests/: test_cp.py  test_topk.py
